--- a/Day-I-Social-Card/social-card/src/components/CardComponents/Card.css
+++ b/Day-I-Social-Card/social-card/src/components/CardComponents/Card.css
@@ -5,18 +5,21 @@
     border-radius: 1%;
 }
 .card-container {
-    width: 1024px;
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
 
 .background-image {
-    height: 200px;
-    width: 500px;
+    height: 50%;
+    width: 100%;
     margin: auto;
 }
 
 .card-p {
-   font-size: 12px;
+   font-size: 14px;
    margin-top: -15px;
+}
+small {
+    color: lightgray;
 }
